--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <img src="images/finals/creative_writing.jpg" />
                     </div><!--end col lg 4 col md 4-->
                      <div class="col-lg-2 col-md-2">
-                        <h4>Dutch Oven</h4>
+                        <h4>Campside Cooking</h4>
                         <img src="images/finals/dutchovencooking.jpg" />
                     </div><!--end col lg 4 col md 4-->
                      <div class="col-lg-2 col-md-2">
@@ -351,12 +351,12 @@
                     </div><!--end col lg 4 col md 4-->
                 </div><!--end row-->
                 <div class="row morequestionsdiv" style="display:none;">
-                    <div class="col-lg-4 col-md-4">
+                    <div class="col-lg-6 col-md-6">
                         <h3>But wait! I need my phone that has my GPS to get me to camp. Can’t I just put it in my pocket for the weekend?</h3>
                         <p>Nope. Everyone will “check in to check out.” We will check in all devices upon arrival so you can check out of technology. Devices will be secured safely and returned to you at the end of camp.
                         </p>
                     </div><!--end col lg 4 col md 4-->
-                    <div class="col-lg-4 col-md-4">
+                    <div class="col-lg-6 col-md-6">
                         <h3>Sooo…In case of emergency... ?</h3>
                         <p>We will have a camp phone number that we will give to our campers in case of emergency. This can be given to your friends and family. If you are still concerned, we recommend that you tell your work colleagues, clients, email contacts, Facebook, Twitter, Instagram, Linked In, and any other social media where will you be. Trust us, you’ll be okay. </p>
                     </div><!--end col lg 4 col md 4-->
@@ -417,8 +417,8 @@
                 <div class="modal-content">
                   <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title" id="myModalLabel">Camp Unplugg'd Talent Form</h4>
-                    <div>
+                    <h4 class="modal-title text-center" id="myModalLabel">Camp Unplugg'd Talent Form</h4>
+                    <div class="text-center">
                         We love campers who have special skills and want to
 contribute! When you register for camp, we will contact you
 about sharing your talent with us. Most of these positions will be volunteer and sessions will be 1 hour long.
