comment first form for now

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="container text-center">
             <i class="fa fa-caret-down arrow-grey"></i>
         </div><!--end container-->
-
+        <!--
         <section id="first-newsletter" class="content-section text-center">
                 <div class="container">
                     <div class="row">
@@ -150,24 +150,21 @@
                                     <div class="col-lg-8 col-lg-offset-2" id="mc_embed_signup">
                                         <form class="input-group input-group-lg" action="http://campunpluggd.us6.list-manage.com/subscribe/post?u=d09d7dd782fea7ba3ce7884b5&amp;id=ad490a52aa" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                             <input type="text" class="form-control" placeholder="Email" id="mce-EMAIL" name="EMAIL" required>
-                                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+
                                             <div style="position: absolute; left: -5000px;"><input type="text" name="b_d09d7dd782fea7ba3ce7884b5_ad490a52aa" value=""></div>
                                             <span class="input-group-btn">
                                             <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn input-btn btn-default">
                                             </span>
-                                        </form><!-- input-group -->
-                                    </div><!-- col-lg-8 -->
-                                </div><!--row-->
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+        -->
 
-                            </div><!-- newsletter box -->
-                        </div><!-- col lg 8 -->
-                    </div><!-- row -->
-                </div><!-- container -->
-        </section><!--end newsletter-->
-
-        <div class="container text-center">
-            <i class="fa fa-caret-down arrow-white"></i>
-        </div><!--end container-->
 
         <section id="features" class="content-section text-center">
             <div class="container">
@@ -198,7 +195,7 @@
         </section><!-- end features section -->
 
         <div class="container text-center">
-            <i class="fa fa-caret-down arrow-grey"></i>
+            <i class="fa fa-caret-down arrow-white"></i>
         </div><!--end container-->
 
          <section id="cabins" class="content-section text-center">
@@ -246,7 +243,7 @@
         </section><!-- end features section -->
 
         <div class="container text-center">
-            <i class="fa fa-caret-down arrow-white"></i>
+            <i class="fa fa-caret-down arrow-grey"></i>
         </div><!--end container-->
 
         <section id="faq" class="content-section text-center">
@@ -366,7 +363,7 @@
         </section>
 
         <div class="container text-center">
-            <i class="fa fa-caret-down arrow-grey"></i>
+            <i class="fa fa-caret-down arrow-white"></i>
         </div><!--end container-->
 
         <section id="newsletter" class="content-section text-center">
