--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="container text-center">
             <i class="fa fa-caret-down arrow-grey"></i>
         </div><!--end container-->
-        <!--
+
         <section id="first-newsletter" class="content-section text-center">
                 <div class="container">
                     <div class="row">
@@ -150,21 +150,24 @@
                                     <div class="col-lg-8 col-lg-offset-2" id="mc_embed_signup">
                                         <form class="input-group input-group-lg" action="http://campunpluggd.us6.list-manage.com/subscribe/post?u=d09d7dd782fea7ba3ce7884b5&amp;id=ad490a52aa" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                             <input type="text" class="form-control" placeholder="Email" id="mce-EMAIL" name="EMAIL" required>
-
+                                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                                             <div style="position: absolute; left: -5000px;"><input type="text" name="b_d09d7dd782fea7ba3ce7884b5_ad490a52aa" value=""></div>
                                             <span class="input-group-btn">
                                             <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn input-btn btn-default">
                                             </span>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-        </section>
-        -->
+                                        </form><!-- input-group -->
+                                    </div><!-- col-lg-8 -->
+                                </div><!--row-->
 
+                            </div><!-- newsletter box -->
+                        </div><!-- col lg 8 -->
+                    </div><!-- row -->
+                </div><!-- container -->
+        </section><!--end newsletter-->
+
+        <div class="container text-center">
+            <i class="fa fa-caret-down arrow-white"></i>
+        </div><!--end container-->
 
         <section id="features" class="content-section text-center">
             <div class="container">
@@ -195,7 +198,7 @@
         </section><!-- end features section -->
 
         <div class="container text-center">
-            <i class="fa fa-caret-down arrow-white"></i>
+            <i class="fa fa-caret-down arrow-grey"></i>
         </div><!--end container-->
 
          <section id="cabins" class="content-section text-center">
@@ -243,7 +246,7 @@
         </section><!-- end features section -->
 
         <div class="container text-center">
-            <i class="fa fa-caret-down arrow-grey"></i>
+            <i class="fa fa-caret-down arrow-white"></i>
         </div><!--end container-->
 
         <section id="faq" class="content-section text-center">
@@ -363,7 +366,7 @@
         </section>
 
         <div class="container text-center">
-            <i class="fa fa-caret-down arrow-white"></i>
+            <i class="fa fa-caret-down arrow-grey"></i>
         </div><!--end container-->
 
         <section id="newsletter" class="content-section text-center">
@@ -404,288 +407,6 @@
             </div><!--container -->
         </section><!--end footer section-->
 
-        <!-- ribbon -->
-            <img src="images/ribbon.gif" border="0" width="150" height="150" style="position:absolute; right:0px; top:0px; margin:0px; padding:0px" class="ribbon" data-toggle="modal" data-target="#myModal">
-        <!-- end ribbon -->
-
-        <!-- modal -->
-            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title text-center" id="myModalLabel">Camp Unplugg'd Talent Form</h4>
-                    <div class="text-center">
-                        We love campers who have special skills and want to
-contribute! When you register for camp, we will contact you
-about sharing your talent with us. Most of these positions will be volunteer and sessions will be 1 hour long.
-                    </div>
-                  </div>
-                  <div class="modal-body">
-                    <!-- Begin MailChimp Signup Form -->
-<style type="text/css">
-    #mc_embed_signup2{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-    /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-       We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-<div id="mc_embed_signup2">
-<div id="mc_embed_signup">
-<form action="http://tumblr.us6.list-manage1.com/subscribe/post?u=d09d7dd782fea7ba3ce7884b5&amp;id=f9acc06fe1" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-<div class="mc-field-group">
-    <label for="mce-FNAME">First Name  <span class="asterisk">*</span>
-</label>
-    <input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
-</div>
-<div class="mc-field-group">
-    <label for="mce-LNAME">Last Name  <span class="asterisk">*</span>
-</label>
-    <input type="text" value="" name="LNAME" class="required" id="mce-LNAME">
-</div>
-<div class="mc-field-group">
-    <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-</label>
-    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-</div>
-<div class="mc-field-group size1of2">
-    <label for="mce-MMERGE3">Phone Number  <span class="asterisk">*</span>
-</label>
-    <div class="phonefield phonefield-us">
-        (<span class="phonearea"><input pattern="[0-9]*" id="mce-MMERGE3-area" name="MMERGE3[area]" maxlength="3" size="3" value="" type="text"></span>)
-        <span class="phonedetail1"><input pattern="[0-9]*" id="mce-MMERGE3-detail1" name="MMERGE3[detail1]" maxlength="3" size="3" value="" type="text"></span> -
-        <span class="phonedetail2"><input pattern="[0-9]*" id="mce-MMERGE3-detail2" name="MMERGE3[detail2]" maxlength="4" size="4" value="" type="text"></span>
-        <span class="small-meta nowrap">(###) ###-####</span>
-        <div class="fake-phone"><input type="hidden" class="required phone" id="MMERGE3-fake-phone" value=""></div>
-    </div>
-</div><div class="mc-field-group">
-    <label for="mce-MMERGE4">What special skills could you teach a group?  <span class="asterisk">*</span>
-</label>
-    <input type="text" value="" name="MMERGE4" class="required" id="mce-MMERGE4">
-</div>
-<div class="mc-field-group input-group">
-    <strong>Will you need supplies?  <span class="asterisk">*</span>
-</strong>
-    <ul><li><input type="radio" value="Yes" name="MMERGE5" id="mce-MMERGE5-0"><label for="mce-MMERGE5-0">Yes</label></li>
-<li><input type="radio" value="No" name="MMERGE5" id="mce-MMERGE5-1"><label for="mce-MMERGE5-1">No</label></li>
-</ul>
-</div>
-<div class="mc-field-group input-group">
-    <strong>Can you facilitate group discussions?  <span class="asterisk">*</span>
-</strong>
-    <ul><li><input type="radio" value="Yes" name="MMERGE6" id="mce-MMERGE6-0"><label for="mce-MMERGE6-0">Yes</label></li>
-<li><input type="radio" value="No" name="MMERGE6" id="mce-MMERGE6-1"><label for="mce-MMERGE6-1">No</label></li>
-</ul>
-</div>
-<div class="mc-field-group input-group">
-    <strong>Are you available from 8/22/2014 to 8/25/2014?  <span class="asterisk">*</span>
-</strong>
-    <ul><li><input type="radio" value="Yes" name="MMERGE7" id="mce-MMERGE7-0"><label for="mce-MMERGE7-0">Yes</label></li>
-<li><input type="radio" value="No" name="MMERGE7" id="mce-MMERGE7-1"><label for="mce-MMERGE7-1">No</label></li>
-</ul>
-</div>
-    <div id="mce-responses" class="clear">
-        <div class="response" id="mce-error-response" style="display:none"></div>
-        <div class="response" id="mce-success-response" style="display:none"></div>
-    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;"><input type="text" name="b_d09d7dd782fea7ba3ce7884b5_f9acc06fe1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button mc-embedded-subscribe"></div>
-</form>
-</div>
-</div>
-<script type="text/javascript">
-var fnames = new Array();var ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[3]='MMERGE3';ftypes[3]='phone';fnames[4]='MMERGE4';ftypes[4]='text';fnames[5]='MMERGE5';ftypes[5]='radio';fnames[6]='MMERGE6';ftypes[6]='radio';fnames[7]='MMERGE7';ftypes[7]='radio';
-try {
-    var jqueryLoaded=jQuery;
-    jqueryLoaded=true;
-} catch(err) {
-    var jqueryLoaded=false;
-}
-var head= document.getElementsByTagName('head')[0];
-if (!jqueryLoaded) {
-    var script = document.createElement('script');
-    script.type = 'text/javascript';
-    script.src = 'http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js';
-    head.appendChild(script);
-    if (script.readyState && script.onload!==null){
-        script.onreadystatechange= function () {
-              if (this.readyState == 'complete') mce_preload_check();
-        }
-    }
-}
-
-var err_style = '';
-try{
-    err_style = mc_custom_error_style;
-} catch(e){
-    err_style = '#mc_embed_signup input.mce_inline_error{border-color:#6B0505;} #mc_embed_signup div.mce_inline_error{margin: 0 0 1em 0; padding: 5px 10px; background-color:#6B0505; font-weight: bold; z-index: 1; color:#fff;}';
-}
-var head= document.getElementsByTagName('head')[0];
-var style= document.createElement('style');
-style.type= 'text/css';
-if (style.styleSheet) {
-  style.styleSheet.cssText = err_style;
-} else {
-  style.appendChild(document.createTextNode(err_style));
-}
-head.appendChild(style);
-setTimeout('mce_preload_check();', 250);
-
-var mce_preload_checks = 0;
-function mce_preload_check(){
-    if (mce_preload_checks>40) return;
-    mce_preload_checks++;
-    try {
-        var jqueryLoaded=jQuery;
-    } catch(err) {
-        setTimeout('mce_preload_check();', 250);
-        return;
-    }
-    var script = document.createElement('script');
-    script.type = 'text/javascript';
-    script.src = 'http://downloads.mailchimp.com/js/jquery.form-n-validate.js';
-    head.appendChild(script);
-    try {
-        var validatorLoaded=jQuery("#fake-form").validate({});
-    } catch(err) {
-        setTimeout('mce_preload_check();', 250);
-        return;
-    }
-    mce_init_form();
-}
-function mce_init_form(){
-    jQuery(document).ready( function($) {
-      var options = { errorClass: 'mce_inline_error', errorElement: 'div', onkeyup: function(){}, onfocusout:function(){}, onblur:function(){}  };
-      var mce_validator = $("#mc-embedded-subscribe-form").validate(options);
-      $("#mc-embedded-subscribe-form").unbind('submit');//remove the validator so we can get into beforeSubmit on the ajaxform, which then calls the validator
-      options = { url: 'http://tumblr.us6.list-manage.com/subscribe/post-json?u=d09d7dd782fea7ba3ce7884b5&id=f9acc06fe1&c=?', type: 'GET', dataType: 'json', contentType: "application/json; charset=utf-8",
-                    beforeSubmit: function(){
-                        $('#mce_tmp_error_msg').remove();
-                        $('.datefield','#mc_embed_signup').each(
-                            function(){
-                                var txt = 'filled';
-                                var fields = new Array();
-                                var i = 0;
-                                $(':text', this).each(
-                                    function(){
-                                        fields[i] = this;
-                                        i++;
-                                    });
-                                $(':hidden', this).each(
-                                    function(){
-                                        var bday = false;
-                                        if (fields.length == 2){
-                                            bday = true;
-                                            fields[2] = {'value':1970};//trick birthdays into having years
-                                        }
-                                        if ( fields[0].value=='MM' && fields[1].value=='DD' && (fields[2].value=='YYYY' || (bday && fields[2].value==1970) ) ){
-                                            this.value = '';
-                                        } else if ( fields[0].value=='' && fields[1].value=='' && (fields[2].value=='' || (bday && fields[2].value==1970) ) ){
-                                            this.value = '';
-                                        } else {
-                                            if (/\[day\]/.test(fields[0].name)){
-                                                this.value = fields[1].value+'/'+fields[0].value+'/'+fields[2].value;
-                                            } else {
-                                                this.value = fields[0].value+'/'+fields[1].value+'/'+fields[2].value;
-                                            }
-                                        }
-                                    });
-                            });
-                        $('.phonefield-us','#mc_embed_signup').each(
-                            function(){
-                                var fields = new Array();
-                                var i = 0;
-                                $(':text', this).each(
-                                    function(){
-                                        fields[i] = this;
-                                        i++;
-                                    });
-                                $(':hidden', this).each(
-                                    function(){
-                                        if ( fields[0].value.length != 3 || fields[1].value.length!=3 || fields[2].value.length!=4 ){
-                                            this.value = '';
-                                        } else {
-                                            this.value = 'filled';
-                                        }
-                                    });
-                            });
-                        return mce_validator.form();
-                    },
-                    success: mce_success_cb
-                };
-      $('#mc-embedded-subscribe-form').ajaxForm(options);
-
-
-    });
-}
-function mce_success_cb(resp){
-    $('#mce-success-response').hide();
-    $('#mce-error-response').hide();
-    if (resp.result=="success"){
-        $('#mce-'+resp.result+'-response').show();
-        $('#mce-'+resp.result+'-response').html(resp.msg);
-        $('#mc-embedded-subscribe-form').each(function(){
-            this.reset();
-        });
-    } else {
-        var index = -1;
-        var msg;
-        try {
-            var parts = resp.msg.split(' - ',2);
-            if (parts[1]==undefined){
-                msg = resp.msg;
-            } else {
-                i = parseInt(parts[0]);
-                if (i.toString() == parts[0]){
-                    index = parts[0];
-                    msg = parts[1];
-                } else {
-                    index = -1;
-                    msg = resp.msg;
-                }
-            }
-        } catch(e){
-            index = -1;
-            msg = resp.msg;
-        }
-        try{
-            if (index== -1){
-                $('#mce-'+resp.result+'-response').show();
-                $('#mce-'+resp.result+'-response').html(msg);
-            } else {
-                err_id = 'mce_tmp_error_msg';
-                html = '<div id="'+err_id+'" style="'+err_style+'"> '+msg+'</div>';
-
-                var input_id = '#mc_embed_signup';
-                var f = $(input_id);
-                if (ftypes[index]=='address'){
-                    input_id = '#mce-'+fnames[index]+'-addr1';
-                    f = $(input_id).parent().parent().get(0);
-                } else if (ftypes[index]=='date'){
-                    input_id = '#mce-'+fnames[index]+'-month';
-                    f = $(input_id).parent().parent().get(0);
-                } else {
-                    input_id = '#mce-'+fnames[index];
-                    f = $().parent(input_id).get(0);
-                }
-                if (f){
-                    $(f).append(html);
-                    $(input_id).focus();
-                } else {
-                    $('#mce-'+resp.result+'-response').show();
-                    $('#mce-'+resp.result+'-response').html(msg);
-                }
-            }
-        } catch(e){
-            $('#mce-'+resp.result+'-response').show();
-            $('#mce-'+resp.result+'-response').html(msg);
-        }
-    }
-}
-
-</script>
-<!--End mc_embed_signup-->
-                  </div>
-        <!-- end modal -->
 
         <!-- Core JavaScript Files -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
