change in activities

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                         <img src="images/finals/ziplining.jpg" width=151px; />
                     </div><!--end col lg 4 col md 4-->
                      <div class="col-lg-2 col-md-2">
-                         <h4>Free Time</h4>
-                        <img src="images/finals/freetime.jpg" />
+                         <h4>Rock Climbing</h4>
+                        <img src="images/finals/rockclimbing.jpg" />
                     </div><!--end col lg 4 col md 4-->
                      <div class="col-lg-2 col-md-2">
                         <h4>Jam Sessions</h4>
@@ -80,8 +80,8 @@
                 </div><!--end row-->
                 <div class="row" style="margin-top: 20px;">
                     <div class="col-lg-2 col-md-2">
-                        <h4>Rock Climbing</h4>
-                        <img src="images/finals/rockclimbing.jpg" />
+                        <h4>Free Time</h4>
+                        <img src="images/finals/freetime.jpg" />
                     </div><!--end col lg 4 col md 4-->
                     <div class="col-lg-2 col-md-2">
                         <h4>S'Mores</h4>
@@ -114,7 +114,7 @@
                         <img src="images/finals/creative_writing.jpg" />
                     </div><!--end col lg 4 col md 4-->
                      <div class="col-lg-2 col-md-2">
-                        <h4>Campside Cooking</h4>
+                        <h4>Cooking</h4>
                         <img src="images/finals/dutchovencooking.jpg" />
                     </div><!--end col lg 4 col md 4-->
                      <div class="col-lg-2 col-md-2">
