--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     <div class="col-lg-4 col-md-4">
                         <h3>What are the camp dates?<br /></h3>
                         <br />
-                        <p>Our first camp session is scheduled for August 2014 (August 22-August 25 2014.). It will be Friday afternoon through Monday morning.
+                        <p>Our first camp session is scheduled for August 22-25 2014. It will be Friday afternoon through Monday morning.
                         </p>
                     </div><!--end col lg 4 col md 4-->
                     <div class="col-lg-4 col-md-4">
@@ -270,20 +270,20 @@
                     <div class="col-lg-4 col-md-4">
                         <h3>Where is the camp located?</h3>
                         <p>Camp Unplugg’d will be taking place at the family-owned Friendly Pines Camp in Prescott, Arizona (and they live up to their name!). It is situated on 86 acres and high in the beautiful Bradshaw mountains.
-                        <a href="www.friendlypines.com">www.friendlypines.com</a> </p>
+                        <a href="http://www.friendlypines.com">www.friendlypines.com</a> </p>
                     </div><!--end col lg 4 col md 4-->
                 </div><!--end row-->
                 <div class="row">
                     <div class="col-lg-4 col-md-4">
                         <h3>How much does it cost? </h3>
-                        <p>Depending on if you prefer a group cabin or private cabin, the range will be between $425-$525 per camper.</p>
+                        <p>Depending on if you prefer a group cabin or private cabin, the range will be between $475-$575 per camper.</p>
                     </div><!--end col lg 4 col md 4-->
                     <div class="col-lg-4 col-md-4">
                         <h3>What does the fee cover?</h3>
                         <p>Campers will receive:<br/>
                             Accommodations from Friday night to Monday morning<br/>
                             Breakfast, Lunch, and Dinner (3 nights)<br/>
-                            Activities, Workshops, and Amenities<br/>
+                            ALl Activities and Workshops<br/>
                             Camp Unplugg’d T-shirt<br/>
                             Memories that will last a lifetime
                         </ul>
@@ -303,7 +303,7 @@
                 <div class="row morequestionsdiv" style="display:none;">
                     <div class="col-lg-4 col-md-4">
                         <h3>Why would I need Camp Unplugg’d?</h3>
-                        <p>With our lives constantly moving and work never ending, we find this much more difficult to do in the real world. We challenge you to go a full weekend with no phone, tv, or wifi. It is nearly impossible. We are proving a safe and fun environment where you can unplug without distraction or impulse.</p>
+                        <p>With our lives constantly moving and work never ending, we find this much more difficult to do in the real world. We challenge you to go a full weekend with no phone, tv, or wifi. It is nearly impossible. We are providing a safe and fun environment where you can unplug without distraction or impulse.</p>
                     </div><!--end col lg 4 col md 4-->
                     <div class="col-lg-4 col-md-4">
                         <h3>Why would I pay to turn off my phone?</h3>
@@ -342,7 +342,7 @@
                     </div><!--end col lg 4 col md 4-->
                     <div class="col-lg-4 col-md-4">
                         <h3>Can I bring an animal?</h3>
-                        <p>Service animals are welcome.</p>
+                        <p>Service animals are welcome and please contact us to send in your documentation.</p>
                     </div><!--end col lg 4 col md 4-->
                     <div class="col-lg-4 col-md-4">
                         <h3>What airport is closest to you?</h3>
