--- a/index.html
+++ b/index.html
@@ -407,6 +407,19 @@
             </div><!--container -->
         </section><!--end footer section-->
 
+        <!--google analytics -->
+        <script>
+   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-50345841-1', 'campunpluggd.com');
+  ga('send', 'pageview');
+
+</script>
+    <!--end google analytics -->
+
 
         <!-- Core JavaScript Files -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
